# muic-archive

./: README.md
data-structures/coding-test-practice/: settings.gradle.kts
data-structures/dsa-demo/: settings.gradle.kts
data-structures/inclass-submissions/: settings.gradle.kts
data-structures/sllist-gradle/: settings.gradle.kts
data-structures/submissions/: hw1.tex  hw2.tex  hw3.tex  hw4.tex  hw5.tex  hw6.tex  hw7.tex  hw8.tex  inclass13.tex
discrete-maths/: HW0.xopp  HW1.xopp  HW2.xopp  HW3.xopp  HW4.xopp
funpar/a1/: Aggregate.scala  AllPerm.scala  Aloud.scala  Happy.scala  Roman.scala  TurnIt.scala  Zombies.scala
funpar/a2/: DateUtil.scala  OptionFriends.scala  Spaghetti.scala  UseLib.scala
funpar/a4/: Cargo.toml
funpar/a5/: 2008_short.csv  Cargo.toml
funpar/a5/src/: cp.rs  cwslice.rs  fib.rs  filter.rs  main.rs  ontime.rs  sudoku.rs
intro-to-programming/: binaryTree.py  listComprehension.py  test.txt  test2048helpimlosingit.py  testBracketes.py  testFile.py  testLinkedList.py  testRW.py  testRemoveElement.py  testSubNoRepeat.py  testTriangle.py
intro-to-programming/Assignment 1/: area.py  decipher.py  decipher.txt  hello.py  secret.py  test2.py  text.py  types.txt
linear-algebra-a/: Problem Set 1.xopp  Problem Set 2.xopp  Problem Set 3.xopp  Problem Set 4.xopp  Problem Set 5.xopp  Problem Set 6.xopp
numerical-computation/: Final.ipynb  Homework 1.ipynb  Homework 2.ipynb  Homework 3.ipynb  Homework 4.ipynb  Homework 5 Gradient Descent.ipynb  Homework 6.ipynb  Homework 7 Hill Climbing.ipynb  Midterm.ipynb
pcsa/a1/: README.md  icsh.c  (+1 more)
(+344 files in other folders)
